--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h2>Velg en ledig plass</h2>
   <div class="map-container">
-    <img src="background.jpg" alt="Plasskart" class="background">
+    <img src="background.png" alt="Plasskart" class="background">
 
     <!-- 14 plasser -->
     <div id="seats"></div>
