--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
   <div id="bookingWrapper">
     <div id="seats">
-      <img src="background.png" alt="Plasskart" class="background">
-      <!-- Her plasseres de 14 setene av JavaScript -->
+      <!-- Plasser og bakgrunn håndteres av CSS + JS -->
     </div>
 
     <div id="bookedList">
