--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Plassbooking</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Velg en ledig plass</h2>
+  <h2>Booking av plass</h2>
 
   <div id="bookingWrapper">
     <div id="seats">
-      <!-- Plasser og bakgrunn håndteres av CSS + JS -->
+      <img src="plasskart.png" alt="Plasskart">
+      <!-- Setene legges med JS -->
     </div>
 
     <div id="bookedList">
-      <h3>🪑 Bookede plasser:</h3>
+      <h3>🪑 Opptatte plasser:</h3>
       <ul id="bookedItems"></ul>
+    </div>
+  </div>
+
+  <!-- Popup-skjema -->
+  <div id="popup" class="hidden">
+    <div class="popup-content">
+      <h3>Book plass <span id="selectedSeat"></span></h3>
+      <form id="bookingForm">
+        <input type="hidden" id="seatNumber" name="seatNumber" />
+        <label for="name">Ditt navn:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
+        <button type="submit">Send inn</button>
+        <button type="button" onclick="closePopup()">Avbryt</button>
+      </form>
     </div>
   </div>
 
