--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
 
   <script>
-    const scriptURL = "DIN_APPS_SCRIPT_WEBAPP_URL";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzlsArraMIZEb7vZcE8my5qiP2ViPG_paz4A6xVidtBoFv5GFONvwu4Um2mXQoaHfwfSA/exec";
     const form = document.getElementById("bookingForm");
     const popup = document.getElementById("popupForm");
     const plassnummerInput = document.getElementById("plassnummer");
